app/src/index.css
.App {
  padding: 0;
}

a.inventory-partnum {
  text-decoration: none;
}

@media (min-width: 992px) { /* bootstrap 'lg' breakpoint */
  .inventory-refpartnum, .inventory-numparts  {
    width: 1%;
    min-width: 15ch;
    white-space: nowrap;
  }

  .inventory-colors {
    width: 1%;
    min-width: 34ch;
  }
}

.inventory-refandnum, .inventory-refandnum-data {
  min-width: 10ch;
  max-width: 10ch;
}

.inventory-refandnum-data {
  word-wrap: break-word;
}

